# character-sheet

./: .gitignore  Cargo.toml  CharacterSheet.toml  LICENSE  README.md  character_sheet_sample.json  json5-to-json.py  standard.json5
char-validator/: Cargo.toml  README.md
char-validator/src/: character_template.rs  lib.rs
src/: character_roll.rs  character_sheet.rs  character_sheet_validator.rs  character_template.rs  lib.rs
src/character_sheet/: config.rs
src/character_template/: attributes.rs  common.rs  perk.rs  weapon_proficiency.rs
